[package]
name = "RBmesh"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt" ] }
stm32wlxx-hal = { version = "0.6.1", features = ["stm32wle5", "rt", "defmt"] }
