[package]
name = "RBmesh"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[dependencies]
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt" ] }
heapless = "0.8.0"

[dependencies.rtic]
version = "2.0.0"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "2.0.0"
features = ["cortex-m-systick"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies.stm32wlxx-hal]
version = "0.6.1"
features = ["stm32wle5", "rt", "defmt"]